Update output and slide definitions

--- a/presentation/0-introduction.ipynb
+++ b/presentation/0-introduction.ipynb
@@ -2,29 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Having fun with music and Keras"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "## My personal motivation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## What are we going to do?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## What are we going to do?\n",
+    "\n",
     "* Understand how to build a simple synthesizer using `numpy`\n",
     "* Explain a bit about music theory and come up with a simple way to generate something that sounds musical\n",
     "* Use this generated data set for some deep learning applications\n",
@@ -36,21 +43,24 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Why take this approach?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Why take this approach?\n",
+    "\n",
     "Why generate a data set when you can download an existing one?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Main reason: \n",
     "* It's more fun this way\n",
@@ -60,34 +70,59 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Deep learning applications"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "**On synthesized music**\n",
     "* Single out an instrument when multiple instruments are playing together\n",
     "* Detect what notes are being played (solvege) for single instrument, one note\n",
-    "* Extend that model to multiple instruments and with more than one note\n",
-    "\n",
+    "* Extend that model to multiple instruments and with more than one note"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
     "**On real music**\n",
     "* Detect when a lead guitar is playing over a backing track"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Prerequisite knowledge?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "* Basic `numpy` knowledge\n",
     "* Bonus: Have a bit experience with the Keras API\n",
@@ -96,6 +131,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
