--- a/presentation/1-building-synthesizers.ipynb
+++ b/presentation/1-building-synthesizers.ipynb
@@ -107,14 +107,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sr"
+    "data_raw[50000:50100]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The highest frequency that can be encoded is then 22 kHz (44100/2), which is already higher than the maximum frequency that we can hear (~20 kHz, but decreases with age). "
+    "* Data is stored as signed integers. We would like to convert to floating point numbers between -1, 1\n",
+    "\n",
+    "* What do these numbers mean?"
    ]
   },
   {
@@ -139,14 +141,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_raw[50000:50100]"
+    "sr"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data is stored as signed integers. We would like to convert to floating point numbers between -1, 1"
+    "The highest frequency that can be encoded is then 22 kHz (44100/2), which is already higher than the maximum frequency that we can hear (~20 kHz, but decreases with age). "
    ]
   },
   {
@@ -167,6 +169,15 @@
    "outputs": [],
    "source": [
     "data.plot();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A very nice tool when working with audio is the Audio element in `IPython.display`\n",
+    "\n",
+    "```from IPython.display import Audio```"
    ]
   },
   {
