--- a/presentation/4b-note-detection-monophonic.ipynb
+++ b/presentation/4b-note-detection-monophonic.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Imports"
    ]
@@ -10,7 +14,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -57,15 +65,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Goal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Goal\n",
+    "\n",
     "We are going to generate some music and detect which notes were being played\n",
     "\n",
     "```\n",
@@ -75,28 +82,39 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Method"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "1. Generate a sequence of notes using the music generator\n",
-    "2. Render it to a wave using the synthesizer\n",
-    "3. Chop the wave data into small batches of a 1/10 of a second\n",
-    "4. Use Fourier to go to a frequency representation of the sound\n",
-    "5. For each of those batches, predict which note is being played\n",
-    "6. Mold the data into a multiclass classification problem\n",
-    "7. Each class corresponds to a note being played\n",
-    "8. Train a model with a Gated Recurrent Unit as classifier"
+    "1. Generate random music\n",
+    "2. Chop the wave data into small batches of a 1/10th of a second\n",
+    "3. Use Fourier to go to a frequency representation of the sound\n",
+    "4. For each of those batches, predict which note is being played\n",
+    "5. Mold the data into a multiclass classification problem\n",
+    "6. Each class corresponds to a note being played\n",
+    "7. Train a model with a Gated Recurrent Unit as classifier"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Parameters"
    ]
@@ -104,7 +122,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "sr = 44100\n",
@@ -114,7 +136,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Generate & render the data"
    ]
@@ -122,7 +148,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "scale = scales.major_scale('C')\n",
@@ -134,7 +164,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "def generate_dataset(scale, tempo, signature, inst, n_measures=128, n_notes_per_measure=16):\n",
@@ -150,7 +184,7 @@
     "    df_targets['duration'] = [x.duration.seconds for x in trk_lead.generate_notes()]\n",
     "    df_targets['end'] = df_targets['offset'] + df_targets['duration']\n",
     "    df_targets['note'] = [str(x.note) for x in trk_lead.generate_notes()]\n",
-    "    df_targets = df_targets.groupby(['offset', 'end', 'note']).size().unstack('note').fillna(0)\n",
+    "    df_targets = df_targets.groupby(['offset', 'end', 'note']).size().unstack('note').fillna(0).astype(int)\n",
     "    df_targets = df_targets.reset_index()\n",
     "    \n",
     "    return audio, trk_lead, df_targets"
@@ -159,7 +193,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "audio, trk_lead, df_targets = generate_dataset(scale, tempo, signature, inst)"
@@ -167,7 +205,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Multiclass note targets "
    ]
@@ -175,7 +217,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "df_targets.head(4)"
@@ -184,7 +230,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "note_cols = [str(x) for x in \n",
@@ -194,7 +244,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Fourier analysis of the waveform"
    ]
@@ -202,18 +256,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "plots.set_style()\n",
-    "plots.stft_plot(audio, sr, vmax=0.1)\n",
+    "plots.stft_plot(audio, sr, vmax=0.05)\n",
     "plt.xlim([0, 20])\n",
     "plt.ylim([0, 3000])"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Apply Fourier and collect the right targets"
    ]
@@ -221,7 +283,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "def clip_incomplete_batch(arr, batch_size):\n",
@@ -231,7 +297,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "def preprocess(audio, df_targets, n_steps, batch_size):\n",
@@ -258,7 +328,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "n_steps = 1\n",
@@ -269,7 +343,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## Why Fourier is helping"
    ]
@@ -277,7 +355,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "sel = np.arange(0, 200)\n",
@@ -286,7 +368,7 @@
     "\n",
     "plt.sca(ax[0])\n",
     "sel = np.arange(0, 200)\n",
-    "plt.pcolormesh(X_train[sel, 0, 0:130].T, vmin=0, vmax=0.1)\n",
+    "plt.pcolormesh(X_train[sel, 0, 0:130].T, vmin=0, vmax=0.05)\n",
     "\n",
     "plt.sca(ax[1])\n",
     "sel = np.arange(0, 200)\n",
@@ -295,13 +377,17 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Setting up the GRU\n",
     "\n",
     "### Layer Design\n",
     "\n",
-    "* The hidden state is 14 dimensional, which is also the number of classes\n",
+    "* The hidden state is 14 dimensional, which is also the number of different notes that can be played\n",
     "* The number of timesteps is set to only 1, but the RNN is stateful\n",
     "* Each timestep corresponds to a Fourier spectrum, which is a vertical slice in the FFT plot above\n",
     "* The `input_dim` parameter corresponds to the number of frequencies in FFT (=2048 + 1, in this case)\n",
@@ -312,7 +398,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "n_channels = stft_frequencies.shape[0]\n",
@@ -333,7 +423,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "model.fit(X_train, y_train, batch_size=batch_size, epochs=16, verbose=1)"
@@ -342,7 +436,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_train, batch_size=batch_size)\n",
@@ -364,7 +462,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Test model"
    ]
@@ -372,7 +474,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "audio, trk_lead, df_targets = generate_dataset(scale, tempo, signature, inst)\n",
@@ -382,7 +488,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_test, batch_size=batch_size)\n",
@@ -404,6 +514,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
