--- a/presentation/4c-note-reconstruction-polyphonic.ipynb
+++ b/presentation/4c-note-reconstruction-polyphonic.ipynb
@@ -1,9 +1,29 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Making it a bit harder\n",
+    "\n",
+    "We are going to increase the complexity on two levels:\n",
+    "\n",
+    "* We are going to add chords and bass instruments\n",
+    "* We are going to let the lead synthesizer play multiple notes at once"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
@@ -13,7 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "from music_generator.basic.random import generate_dataset, make_lead_instrument, generate_lead_track\n",
@@ -31,13 +55,19 @@
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "import datetime as dt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "from IPython.display import Audio"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "set_style()"
@@ -46,10 +76,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
-    "sampling_info = SamplingInfo(44100)\n",
+    "sr = 44100\n",
+    "sampling_info = SamplingInfo(sr)\n",
     "scale = GenericScale('C', [0, 1, 4, 5, 7, 8, 10])\n",
     "signature = Signature(4, 4)\n",
     "n_measures = 128\n",
@@ -59,7 +94,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "lead_instrument = make_lead_instrument(sampling_info)"
@@ -68,7 +107,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "tracks, parts, mix = generate_dataset(n_measures, Tempo(120), scale=scale)"
@@ -77,7 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "trk_bass, trk_chord, trk_lead = tracks\n",
@@ -86,7 +133,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Add harmony"
    ]
@@ -94,7 +145,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "lead_track = generate_lead_track(scale, tempo, signature, n_measures, 4)"
@@ -103,7 +158,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "terts = pd.DataFrame({'note': scale.generate(4, 8)[:-2], 'harm': scale.generate(4, 8)[2:]})\n",
@@ -118,7 +177,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "measure = Measure(t, Signature(4, 4))\n",
@@ -133,7 +196,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "mix = mix_at(y_bass, y_chord)\n",
@@ -142,7 +209,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "## End mix harmony"
    ]
@@ -150,7 +221,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.DataFrame()\n",
@@ -159,7 +234,7 @@
     "df['duration'] = [x.duration.seconds for x in trk_lead.generate_notes()]\n",
     "df['end'] = df['offset'] + df['duration']\n",
     "df['note'] = [str(x.note) for x in trk_lead.generate_notes()]\n",
-    "df = df.groupby(['offset', 'end', 'note']).size().unstack('note').fillna(0)\n",
+    "df = df.groupby(['offset', 'end', 'note']).size().unstack('note').fillna(0).astype(int)\n",
     "note_cols = df.columns\n",
     "df = df.reset_index()"
    ]
@@ -167,7 +242,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "note_cols = [str(x) for x in \n",
@@ -177,7 +256,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "df;"
@@ -186,29 +269,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
-    "play_array(mix , range_secs=[0, 10])"
+    "Audio(mix[0:10*sr] , rate=sr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## The Fourier spectrum shows that the problem is much harder now!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
-    "f_vec, t_vec, Zxx = stft(mix, sampling_info.sample_rate, nperseg=2048)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "f_vec, t_vec, Zxx = stft(mix, sampling_info.sample_rate, nperseg=2048)\n",
     "plt.pcolormesh(t_vec, f_vec, np.abs(Zxx), vmin=0, vmax=1e-1)\n",
-    "# plt.title('STFT Magnitude')\n",
+    "plt.title('STFT Magnitude')\n",
     "plt.ylabel('Frequency [Hz]')\n",
     "plt.xlabel('Time [sec]')\n",
     "plt.ylim(0, 3000)\n",
@@ -218,7 +312,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "y_train = np.array([df[(df.offset <= t) & (t < df.end)][note_cols].sum().values for t in t_vec])"
@@ -227,7 +325,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "df.head(4)"
@@ -236,7 +338,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "n_steps = 1\n",
@@ -251,7 +357,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train = X_train[0:batch_size * (len(X_train) // batch_size)]\n",
@@ -261,7 +371,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "from keras import Model\n",
@@ -271,7 +385,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "inp = Input(shape=(n_steps, f_vec.shape[0]), batch_shape=(batch_size,n_steps, f_vec.shape[0]))\n",
@@ -291,7 +409,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "X_train.T"
@@ -300,7 +422,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "outputs": [],
    "source": [
     "val_split = 0.125\n",
@@ -313,19 +439,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "history = model.fit(X_train, \n",
     "                    y_train, \n",
     "                    batch_size=batch_size, \n",
-    "                    epochs=300, validation_split=val_split, verbose=0)\n"
+    "                    epochs=300, validation_split=val_split, verbose=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Get some coffee"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_train, batch_size=batch_size)\n",
@@ -359,9 +504,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## After training for a night"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_train, batch_size=batch_size)\n",
@@ -384,6 +544,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
